2015-12-15  Julien Bect  <julien.bect@centralesupelec.fr>

	stk_maxabscorr.m: Rewrite without using corr

	* misc/design/stk_maxabscorr.m: Rewrite without using corr.
	* stk_init.m (stk_init__config_mole): Remove corr
	* misc/mole/corr/corr.m: Deleted

2015-12-09  Julien Bect  <julien.bect@centralesupelec.fr>

	wfg.c: Fix a bug in Rlist_extend

	* misc/pareto/private/wfg.c (Rlist_extend): Fix a bug
	* misc/pareto/stk_dominatedhv.m: Add unit tests

2015-12-08  Julien Bect  <julien.bect@centralesupelec.fr>

	wfg.c: Fix a bug in Rlist_inclhv4

	* misc/pareto/private/wfg.c (Rlist_inclhv4): Fix a bug
	* misc/pareto/stk_dominatedhv.m: Add unit tests

2015-12-03  Julien Bect  <julien.bect@centralesupelec.fr>

	Display a legend in several "kriging basics" examples

	* examples/01_kriging_basics/stk_example_kb01.m: Show legend
	* examples/01_kriging_basics/stk_example_kb02.m: Show legend
	* examples/01_kriging_basics/stk_example_kb04.m: Show legend
	* examples/01_kriging_basics/stk_example_kb09.m: Show legend

	@stk_model_gpposterior: A new class to represent posterior distributions

	* core/@stk_model_gpposterior/stk_model_gpposterior.m: Class
	constructor.
	* core/stk_predict.m: Transfer a large part of the predicition
	code to the method @stk_model_gpposterior/predict.m.
	* core/@stk_model_gpposterior/stk_predict.m: Overload stk_predict.
	* core/@stk_model_gpposterior/disp.m: Overload base function
	* core/@stk_model_gpposterior/display.m: Overload base function
	* core/@stk_model_gpposterior/get.m: Overload base function
	* core/@stk_model_gpposterior/subsref.m: Overload base function
	* core/@stk_model_gpposterior/vertcat.m: Overload base function
	* core/@stk_model_gpposterior/horzcat.m: Overload base function
	* core/@stk_model_gpposterior/get_dim.m: Fast getter
	* core/@stk_model_gpposterior/get_input_data.m: Fast getter
	* core/@stk_model_gpposterior/get_lognoisevariance.m: Fast getter
	* core/@stk_model_gpposterior/get_output_data.m: Fast getter