@@ -1,0 +1,43 @@
+% STK_BENCHMARK_INIT measures stk_init's runtime
+%
+% Loading STK should be as fast as possible...
+%
+% This script can be used to tic-toc or profile stk_init ().
+
+% Copyright Notice
+%
+%    Copyright (C) 2016 CentraleSupelec
+%
+%    Author:  Julien Bect  <julien.bect@centralesupelec.fr>
+
+% Copying Permission Statement
+%
+%    This file is part of
+%
+%            STK: a Small (Matlab/Octave) Toolbox for Kriging
+%               (http://sourceforge.net/projects/kriging)
+%
+%    STK is free software: you can redistribute it and/or modify it under
+%    the terms of the GNU General Public License as published by the Free
+%    Software Foundation,  either version 3  of the License, or  (at your
+%    option) any later version.
+%
+%    STK is distributed  in the hope that it will  be useful, but WITHOUT
+%    ANY WARRANTY;  without even the implied  warranty of MERCHANTABILITY
+%    or FITNESS  FOR A  PARTICULAR PURPOSE.  See  the GNU  General Public
+%    License for more details.
+%
+%    You should  have received a copy  of the GNU  General Public License
+%    along with STK.  If not, see <http://www.gnu.org/licenses/>.
+
+NREP = 10;
+
+t0 = tic ();
+
+for i = 1:NREP,
+    stk_init ();
+end
+
+t = (toc (t0)) / NREP;
+
+fprintf ('Average runtime for a call to stk_init: %.3f seconds\n', t);
